search result moved into separate component

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,11 +4,5 @@
     <input (keyup.enter)="search()" [(ngModel)]="searchString" placeholder="Search phrase">
     <button (click)="search()" >Search</button>
   </div>
-  <div *ngIf="repoNames$ | async">
-    <ul style="padding-left: 0">
-      <li *ngFor="let result of (repoNames$ | async)" class="search-result">
-        {{ result }}
-      </li>
-    </ul>
-  </div>
+  <app-search-result></app-search-result>
 </div>
